# foldopt

./: README.md  pyproject.toml
.github/workflows/: workflow.yml
foldopt/: __init__.py
foldopt/examples/: 1fca.py  1fca_ga.py  2ygs.py  4rxn.py
foldopt/models/: __init__.py  base.py  irback.py
foldopt/opt/: __init__.py  base.py  genetic_annealing.py  metropolis_annealing.py
