[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foldopt"
dynamic = ["version"]
description = "Protein conformation optimization!"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [ 
    { name = "Hrishikesh Belagali", email = "belagal1@msu.edu" },
]
keywords = [
    'template'
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy"
]

[project.urls]
Homepage = "https://github.com/lonelyneutrin0/foldopt"

[project.optional-dependencies]
dev = [
    "hatchling~=1.27.0",
    "pytest~=8.0.2",
    "ruff~=0.9.4",
    "mypy~=1.13.0",
    "pdoc~=15.0.4",
    
]

examples = [ 
    "matplotlib~=3.10.3"
]

[tool.hatch.version]
path = "foldopt/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/foldopt",
]

[tool.pytest.ini_options]
pythonpath = ["."]